fix: visible price

--- a/css/admin.css
+++ b/css/admin.css
@@ -1284,15 +1284,14 @@ tr {
   */
 
   .account-form {
-    width: 500px;
+    width: 400px;
     background-color: #f8f9fa;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 31%;
+    left: 37%;
     z-index: 1000;
 }
 
